Minor corrections in book and release checklist
After the release, I noticed that the first accent on Éric Thiébaut's name
was mistakenly placed on the `r' instead of the `E' in the book. It is
corrected now.

Also, a typo was found in the release checklist and Ole's email address was
added (to inform for the upload to Debian's servers).

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -1698,7 +1698,7 @@ Kelvin, Brandon Kelly, Mohammad-Reza Khellat, Floriane Leclercq, Alan
 Lefor, Guillaume Mahler, Francesco Montanari, Bertrand Pain, William Pence,
 Bob Proulx, Yahya Sefidbakht, Alejandro Serrano Borlaff, Lee Spitler,
 Richard Stallman, Ole Streicher, Alfred M. Szmidt, Michel Tallon, Juan
-C. Tello, E@'ric Thi@'ebaut, Ignacio Trujillo, David Valls-Gabaud, Aaron
+C. Tello, @'Eric Thi@'ebaut, Ignacio Trujillo, David Valls-Gabaud, Aaron
 Watkins, Christopher Willmer, Sara Yousefi Taemeh, Johannes Zabl. The GNU
 French Translation Team is also managing the French version of the top
 Gnuastro webpage which we highly appreciate. Finally we should thank all
