Corrected typo in book and developer-build
There were two `$' signs in one of the example commands in the General
program usage tutorial. Also, the error messages when `--upload' and
`--publish' aren't given a value has been made more clear.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -3390,9 +3390,9 @@ all apertures to be identical after all).
 
 @example
 $ rm *.txt
-$ $ asttable cat/xdf-f160w.fits -h2 -cRA,DEC                       \
-             | awk '!/^#/@{print NR, $1, $2, 5, 5, 0, 0, 1, NR, 1@}' \
-             > apertures.txt
+$ asttable cat/xdf-f160w.fits -h2 -cRA,DEC                       \
+           | awk '!/^#/@{print NR, $1, $2, 5, 5, 0, 0, 1, NR, 1@}' \
+           > apertures.txt
 @end example
 
 We can now feed this catalog into MakeProfiles to build the apertures for
